feat: design form

--- a/resources/css/app.scss
+++ b/resources/css/app.scss
@@ -5,17 +5,17 @@
 @tailwind utilities;
 
 :root {
-    --primary-50: 236 253 245;
-    --primary-100: 209 250 229;
-    --primary-200: 167 243 208;
-    --primary-300: 110 231 183;
-    --primary-400: 52 211 153;
-    --primary-500: 16 185 129;
-    --primary-600: 5 150 105;
-    --primary-700: 4 120 87;
-    --primary-800: 6 95 70;
-    --primary-900: 4 78 56;
-    --primary-950: 2 44 34;
+    --primary-50: 195	223	209;
+    --primary-100: 166	207	186;
+    --primary-200: 151	199	175;
+    --primary-300: 136	191	163;
+    --primary-400: 121	183	152;
+    --primary-500: 107	176	141;
+    --primary-600: 96	158	126;
+    --primary-700: 85	140	112;
+    --primary-800: 74	123	98;
+    --primary-900: 64	105	84;
+    --primary-950: 53	88	70;
     --surface-0: 255 255 255;
     --surface-50: 248 250 252;
     --surface-100: 241 245 249;
@@ -30,3 +30,6 @@
     --surface-950: 3 6 23;
 }
 
+body{
+    background: #fefdfa;
+}
