--- a/resources/css/app.scss
+++ b/resources/css/app.scss
@@ -5,17 +5,17 @@
 @tailwind utilities;
 
 :root {
-    --primary-50: 195	223	209;
-    --primary-100: 166	207	186;
-    --primary-200: 151	199	175;
-    --primary-300: 136	191	163;
-    --primary-400: 121	183	152;
-    --primary-500: 107	176	141;
-    --primary-600: 96	158	126;
-    --primary-700: 85	140	112;
-    --primary-800: 74	123	98;
-    --primary-900: 64	105	84;
-    --primary-950: 53	88	70;
+    --primary-50:250 250 248;
+    --primary-100: 245 245 242;
+    --primary-200: 230 230 222;
+    --primary-300: 215 215 202;
+    --primary-400: 185 186 162;
+    --primary-500: 155 156 122;
+    --primary-600: 140 140 110;
+    --primary-700: 93 94 73;
+    --primary-800: 70 70 55;
+    --primary-900: 47 47 37;
+    --primary-950: 47 47 37;
     --surface-0: 255 255 255;
     --surface-50: 248 250 252;
     --surface-100: 241 245 249;
